* src/actions.c (update_all_gcs): new function (cmd_deffont): update the graphics contexts.
* src/actions.c (spawn): Only call setsid if it exists.
(spawn): Only call setpgid if it exists.
(spawn): if setpgid doesn't exist, try setpgrp.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2001-09-16  shawn  <sabetts@diggin.lamenet.tmp>
 
+	* src/actions.c (update_all_gcs): new function
+	(cmd_deffont): update the graphics contexts.
+
 	* src/list.c (format_window_name): Use 2 character escape codes,
 	like printf. Dependant code updated.
 
