--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.0.0
+** clock command renamed to time
+This was to improve screen compatibility.
+
 ** New command setenv
 Use this to set environment variables for all programs run from
 ratpoison thereafter.
