--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-09-18  shawn  <sabetts@vcn.bc.ca>
+
+	* src/list.c (window_name): make sure the default window name is
+	not NULL. In this case return win's user_name field which is never
+	NULL.
+
 2001-09-18  shawn  <sabetts@diggin.lamenet.tmp>
 
 	* src/actions.c(user_commands)[0]: remove "lastmsg" from the list.
