--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-uuratpoison NEWS --- history of user-visible changes.  -*- outline -*-
+ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.0.0
 ** Remove command line options --kill and --restart
