--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -233,6 +233,10 @@ Run a shell command.
 @item C-t C-!
 Run a shell command through an X terminal.
 
+@item C-t i
+@item C-t C-i
+Display information about the current window.
+
 @item C-t k
 @item C-t C-k
 Close the current window.
@@ -243,6 +247,10 @@ Redisplay the current window. Sometimes windows don't respond correctly
 to the initial maximize event and need some coaxing. This is a fancy way
 of saying there are still bugs in ratpoison. @kbd{C-t l} will force the
 current window to maximize.
+
+@item C-t m
+@item C-t C-m
+Display the last message.
 
 @item C-t v
 @item C-t C-v
@@ -303,11 +311,14 @@ key to bind and the command to run. For example, to bind @kbd{C-t R} to
 restart ratpoison:
 
 @example
-: bind R exec ratpoison --restart
+: bind R restart
 @end example
 
 If no command is specified then bind works exactly like @command{unbind},
 unbinding the key.
+
+@item chdir
+Change the current directory for ratpoison.
 
 @item clock
 Show current time. Disappears after 5 seconds, like all other info bars.
@@ -402,11 +413,26 @@ prefix key to @key{C-b}.
 @item focus
 cycle through ratpoison's frames.
 
+@item focusup
+Move to the frame above the current frame.
+
+@item focusdown
+Move to the frame below the current frame.
+
+@item focusleft
+Move to the frame left of the current frame.
+
+@item focusright
+Move to the frame right of the current frame.
+
 @item meta
 Send a @kbd{C-t} to the current window.
 
 @item help
 Display a help screen that lists all bound keystrokes.
+
+@item info
+Display information about the current window.
 
 @item echo @var{text}
 Display @var{text} as a message.
@@ -420,8 +446,14 @@ use @command{delete}, but just in case you need to rip the heart out of a
 misbehaving window this command should do the trick. Also available as
 @kbd{C-t K}.
 
+@item lastmsg
+Display the last message.
+
 @item redisplay
 Redisplay the current window, just like @kbd{C-t l} would do.
+
+@item restart
+Restart ratpoison.
 
 @item next
 This jumps you to the next window in the window list. This one is
@@ -506,6 +538,9 @@ frame, type @samp{select -}.
 @item select @var{window-name}
 Go to a window by name. A shortcut is @kbd{C-t '}.
 
+@item setenv @var{env} @var{value}
+Set the environment variable @var{env} to @var{value}
+
 @item source @var{file}
 Read a text file containing ratpoison commands.
 
@@ -514,6 +549,10 @@ Read a text file containing ratpoison commands.
 Split the current window horizontally in two. The last accessed window
 not occupying a frame will be the second window.
 
+@item startup_message @var{state}
+Turn on or off the startup_message. This is most useful in your
+.ratpoisonrc file. @var{state} can be @code{on} or @code{off}.
+
 @item title @var{title}
 Rename the currently active window. This name will remain for the
 duration of the window's life, unless you change it again. By default,
@@ -521,6 +560,9 @@ the @kbd{C-t A} keystroke is bound to this command.
 
 @item unbind @var{key}
 Unbind a keystroke.
+
+@item unsetenv @var{env}
+Clear the value of the environment variable, @var{env}.
 
 @item version
 Print ratpoison version.  By default, this is bound to @kbd{C-t v}.
@@ -567,12 +609,6 @@ Display this help screen
 
 @item -v, --version
 Display the version
-
-@item -r, --restart
-Restart ratpoison
-
-@item -k, --kill
-Kill ratpoison
 
 @item -c, --command
 Send ratpoison a colon-command. This allows you to control ratpoison
