--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-09-23  shawn  <sabetts@vcn.bc.ca>
+
+	* src/actions.c (initialize_default_keybindings): Change C-t a and
+	C-t C-a binding to "time".
+
 2001-09-21  shawn  <sabetts@vcn.bc.ca>
 
 	* src/split.h (find_frame_up): new prototype
