--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-05  Gergely Nagy  <algernon@debian.org>
+
+	* contrib/ratpoisonrc-mode.el: superceded by..
+	* contrib/ratpoison.el: ..this one, now with AllYou'llEverNeed(tm)
+
 2001-10-01  shawn  <sabetts@vcn.bc.ca>
 
 	* src/bar.c (marked_message_printf): Handle a return value from
